--- a/webgpu-react/package.json
+++ b/webgpu-react/package.json
@@ -5,10 +5,12 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "deploy": "gh-pages -d dist"
+    "deploy": "gh-pages -d dist",
+    "build:fast": "vite build",
+    "build": "npm run build:sprites && vite build",
+    "build:sprites": "node tools/build-sprites.mjs --pixelScale=2 --mode=all ./public/sprites/**/*.png"
   },
   "dependencies": {
     "bootstrap": "^5.3.8",
@@ -28,7 +30,10 @@
     "eslint": "^9.33.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
+    "glob": "^11.0.3",
     "globals": "^16.3.0",
+    "minimist": "^1.2.8",
+    "sharp": "^0.34.4",
     "typescript": "^5.9.2",
     "vite": "^7.1.2"
   }
